force-app/main/default/objects/Cargo__c/Cargo__c.object-meta.xml
<CustomObject>
    <label>Cargo</label>
    <nameField>
        <label>Cargo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cargo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>