force-app/main/default/objects/Cargo__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Freight</fullName>
            </value>
            <value>
                <fullName>Sea Freight</fullName>
            </value>
            <value>
                <fullName>Ground Transport</fullName>
            </value>
            <value>
                <fullName>Rail Freight</fullName>
            </value>
            <value>
                <fullName>Express Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>